--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -1,8 +1,3 @@
-.accordion-body p img {
-  max-width: 50% !important;
-  height: auto !important;
-  width: auto !important;
-}
 @font-face {
     font-family: 'source_sans_proregular';
     src: url('/portal/css/fontes/sourcesans/sourcesanspro-regular-webfont.eot');
@@ -12,30 +7,39 @@
          url('/portal/css/fontes/sourcesans/sourcesanspro-regular-webfont.svg#source_sans_proregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
+
+@font-face {
+    font-family: 'source_sans_probold';
+    src: url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.eot');
+    src: url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.woff') format('woff'),
+         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.ttf') format('truetype'),
+         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.svg#source_sans_probold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+} 
+
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container { max-width: 970px; }
 .nav-tabs > li > a,
 .hero-unit .fechar,
 .hero-unit  {  border-radius:0; -moz-border-radius: 0; -webkit-border-radius: 0;  }
 .hero-unit { padding:0; margin:0; background:#eee; min-height:217px;  }
-
+.hero-unit .col-esq h1 { margin:3% 0 0 0; padding:0; text-indent:-9999px; }
 .nav-tabs > li > a,
 .accordion-heading .accordion-toggle,
 .conteudo h2,
 .hero-unit .col-esq p,
 .hero-unit .fechar { font-family: 'source_sans_proregular'; }
 .hero-unit .fechar { background:#666; text-transform:uppercase; color:#fff; margin-top:20px; border:none; text-shadow:none; padding:0 5px; font-weight:bold; float:right; font-size:12px;  }
-
 .conteudo h2 { font-size:22px; line-height:24px; margin:20px 0 5px 0; color:#666; text-transform:uppercase; }
 .accordion-heading .accordion-toggle { background:#666; color:#fff; text-transform:uppercase; font-weight:bold; padding:4px 20px; border:1px dotted #fff; font-size:16px; text-decoration:none; position:relative; }
 .accordion-heading .accordion-toggle:hover,
 .accordion-heading .accordion-toggle.ativo { background:#333; text-decoration:none !important; }
-.accordion-heading .accordion-toggle{position:relative; /*z-index:50000;*/}
+.accordion-heading .accordion-toggle{position:relative;}
 .accordion-heading .accordion-toggle i { margin:4px 10px 0 0; }
-.accordion-body img { /*max-width: 360px;*/ float:left;  margin-right:10px;}
+.accordion-body img { float:left;  margin-right:10px;}
 .accordion-body a { color:#000; text-decoration:underline; }
-
 .nav-tabs > li { margin-bottom:0; }
 .nav-tabs { background:#666; border:none; border-left: 1px dotted #fff;  }
 .nav-tabs > li { border-right: 1px dotted #fff; }
@@ -43,10 +47,8 @@
 .nav-tabs > li:hover > a,
 .nav-tabs > .active > a,
 .nav-tabs > .active > a:hover {  background:#333; color:#fff; border:none; }
-
 .modal a { color:#000; text-decoration:underline; }
 .conteudo { margin-bottom:50px; }
-
 .accordion-group { border:none; }
 .accordion-body,
 .accordion-inner { border:none; background:#eee; overflow:hidden; }
@@ -57,7 +59,6 @@
 .accordion-body p,
 .accordion-body img { padding:0 15px;} 
 .accordion-body p img { padding-top:0 !important; }
-
 .accordion-body #mais h3 { background:#333; color:#fff; padding:2px 5px; font-size:14px; height:18px; line-height:18px; float: left; text-transform:uppercase; margin:0 15px 10px 15px; font-weight:normal;}   
 .accordion-body #mais ul { clear:both; margin-left:20px; } 
 .accordion-body #mais li { list-style:none;} 
@@ -65,7 +66,6 @@
 .accordion-body #mais li a { text-decoration:none;}
 .accordion-body #mais li a:hover { text-decoration:underline ;} 
 .accordion-heading .loader { position:absolute; right:10px; top:7px; } 
-
 .accordion-body ul { margin:0; padding:15px;}
 .accordion-body table,
 .accordion-body img { padding:15px 15px 0 0;  float:left; margin-right:0;  }
@@ -79,7 +79,6 @@
 .accordion-heading { margin-bottom:0; } 
 .accordion-body p { margin:10px 0 0 0; }
 .logo-link img { padding:0 0 15px 0; }
-
 .modal-backdrop.fade.in { z-index: 100000; }
 .modal.hide.fade.in { z-index: 1000000; }
 .icon-enquete { background:url(/portal/images/capaPrograma/segundatela/jornaldacultura/icon-enquete.png) no-repeat; width: 16px; height:16px; margin-top:2px !important; }
@@ -88,21 +87,53 @@
 #form .btn { background:#333; border:none;  border-radius:0; -moz-border-radius: 0; -webkit-border-radius: 0; color:#fff; box-shadow: none; text-shadow:none; padding:0 5px; height:20px; line-height:20px; text-transform:uppercase; font-weight:bold; margin-top:10px; float:left; font-family: 'source_sans_proregular'; font-size:14px;}
 #form .ver-resultado { margin:10px 0 0 5px; display:block; float:left;}
 .accordion-body .resultado p { padding:0 !important; }
-
-/* ie */
-.hero-unit .col-dir { width/*\**/:37%\9; }
-.hero-unit .col-esq { *width:310px; } 
-.hero-unit .col-dir { *width:360px;  }
-.hero-unit .menu-jc { *width: 350px;} 
-.hero-unit .col-dir span { *margin:-6px 0 0 0;}  
-.row-fluid .span4 { *margin-left:0} 
-/* /ie */
 .progress .bar { color:#333; }
-/*.accordion-body p img,*/
 .accordion-body iframe { width:100% !important; }
 .accordion-body iframe { min-height:390px; }
 .accordion-body p a img { width:auto !important; }
+.accordion-heading { margin-bottom:5px; }
+.como { margin-right: 10px; }
+.hero-unit { padding-right: 10px; min-height:200px; position:relative}
+.hero-unit .col-esq { max-width: 40%; float:left; }
+.hero-unit .col-esq p {  font-size:14px; line-height: 18px; text-align: left; margin:20px 0 10px 0;  }
+.hero-unit .redes { text-align:left; }
+.hero-unit .col-dir {  float:right; width: 39%; }
+.hero-unit .menu-jc {clear: both; margin-top:40px; float: right; width:auto; }
+.hero-unit .menu-jc ul { width:100%; margin:0; }
+.hero-unit .menu-jc p,
+.hero-unit .menu-jc a { text-transform:uppercase; color:#666; font-weight:bold; float:left; text-align:right; font-size:14px; height:20px; line-height:20px; }
+.hero-unit .menu-jc a:hover { text-decoration:none; }
+.hero-unit .menu-jc li{ list-style: none; float:left;}
+.hero-unit .menu-jc .como { background:#fff; padding:0 5px;}
+.hero-unit .menu-jc .como:hover { background:#666; color:#fff; }
+.hero-unit .menu-jc span { margin:-6px 10px 0 10px; float:left; color:#c4c4c4; font-size: 18px; }
+.hero-unit .menu-jc .numero { background:#666; color:#ccff33; padding:0 5px; margin:0; font-size:14px; min-width:20px; text-align:center; }
+.hero-unit .menu-jc .seta { border:5px solid transparent;  border-left-color: #666; width: 0; height:0; margin:0; padding:0; display:block; float:left; margin-top:5px; }
+.hero-unit .menu-jc .offline { color:#ce0002;}
+#twitter-widget-1 { min-height:600px; }
+.accordion-body p img {  max-width: 50% !important;  height: auto !important;  width: auto !important;}
 
+/* clock */
+#box-clock{width:122px; height:40px; background: #cccccc; display: block; position:relative; top:10px; right:20px; float:right;}
+#box-clock #no-ar{width: 60px;background: #FFF;float: left;height: 30px;margin: 5px;}
+#box-clock #no-ar p{text-align:center; color:#ff0000;font-family:'source_sans_probold', Arial, Helvetica, sans-serif; text-transform:uppercase; font-weight: normal; }
+#box-clock li{line-height: 30px;list-style: none;float: left; font-family:'source_sans_probold', Arial, Helvetica, sans-serif; color:#ccff33; font-weight: normal;}
+#box-clock #no-ar ul{position: absolute;top: 5px;right: 5px;background: #333333;padding: 0 3px; width: 45px; font-size:16px;}
+#hours{padding-left: 2px;}
+#point {position: relative;-moz-animation: mymove 1s ease infinite;-webkit-animation: mymove 1s ease infinite;padding:0 3px;}
+@-webkit-keyframes mymove { 
+0% {opacity:1.0; text-shadow:0 0 20px #00c6ff;}
+50% {opacity:0; text-shadow:none; }
+100% {opacity:1.0; text-shadow:0 0 20px #00c6ff; }  
+}
+
+@-moz-keyframes mymove {
+0% {opacity:1.0; text-shadow:0 0 20px #00c6ff;}
+50% {opacity:0; text-shadow:none; }
+100% {opacity:1.0; text-shadow:0 0 20px #00c6ff; }  
+}
+
+/*medias */
 @media screen and (max-width: 1024px){
   .accordion-body iframe {  min-height:515px; }
 }
@@ -126,8 +157,89 @@ and (orientation : landscape) {
 @media screen and (max-device-width: 1024px){
   .accordion-heading .accordion-toggle { padding:10px 20px; }
 }
-.accordion-heading { margin-bottom:5px; }
 
+/* media screen*/
+@media screen and (max-width: 1200px){
+  .hero-unit .col-dir { max-width: 36%; }
+  .hero-unit .col-esq { max-width:60%; margin-left:0; }
+  .hero-unit .menu-jc .como { margin-bottom:10px; }
+  .hero-unit .menu-jc a,
+  .hero-unit .menu-jc a { font-size:12px; }
+  .hero-unit .menu-jc span { margin-top:-6px;} 
+}
 
+@media screen and (max-width: 1024px){
+  .hero-unit .col-dir { max-width: 33%; }
+  .hero-unit .col-esq { max-width:60%; margin-left:0; }
+  .hero-unit .menu-jc .como { margin-bottom:10px; }
+  .hero-unit .menu-jc p,
+  .hero-unit .menu-jc a { font-size:12px; }
+  .hero-unit .menu-jc span { margin-top:-6px;} 
+  .conteudo .span8 { width:100%; }
+  .conteudo .span4 { width:100%; margin-left:0; }
+  .accordion-inner iframe { width: 100%; height:590px;} 
+  .hero-unit .menu-jc a.online { padding-right:10%; }
+}
+
+@media screen and (max-width: 980px){
+  .hero-unit .col-dir { max-width: 20%; }
+  .hero-unit .col-esq { max-width:40%; margin-left:0; }
+  .hero-unit .col-dir span.barra { display:none; }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media (max-width : 768px)  {
+  .hero-unit .bgtopo { display:none; }
+  .conteudo { background:#fff; overflow:hidden; }
+  .accordion-group .conteudo { background:#eee; }
+  .accordion-inner iframe { width:100%; height:410px; }
+  .hero-unit { padding:0 1%;  }
+  .hero-unit .col-esq { max-width: 100%; width:52%; margin-left:0; }
+  .hero-unit .col-dir { max-width:100%; width:48%; }
+  .hero-unit .col-esq p { text-align:center; }
+  .hero-unit .col-esq h1 { margin:2% auto; }
+  .hero-unit .redes { min-width:350px; margin-left:30px; }
+  .hero-unit .menu-jc { float:right; }
+  .hero-unit .col-dir span.barra { display:block; }
+  .hero-unit .col-dir a { display:block;  }
+  .hero-unit .col-esq p { margin-bottom:6px; }
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+  .hero-unit .col-esq p { margin:22px 0; }
+  .hero-unit .redes { min-width:350px; margin-left:30px; }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media (max-width : 480px)  {
+  body { padding:0; }
+  .hero-unit .col-dir,
+  .hero-unit .col-esq { max-width: 100%; width:100%;}  
+  .hero-unit .col-dir .fechar { display:none; }
+  .hero-unit .col-esq p { margin:4px 0 0; text-align:left; }
+  .hero-unit .col-esq h1 { margin:2% auto; background:url("/portal/images/capaPrograma/segundatela/jornaldacultura/logo-jc-small.png") no-repeat scroll 0 0 transparent }
+  .hero-unit .menu-jc { float:left; margin-left:1%; margin-top:9px; }
+  .conteudo .span8 { min-height:500px; }
+  .hero-unit .col-esq p { text-align:center; }
+  #box-clock { float:left !important; left:30px; top:0 !important; }
+  .hero-unit .col-esq p { display:none; }
+  .conteudo h2 { padding-left:20px; }
+  .hero-unit .menu-jc { padding-left:25px; }
+}
+
+/* /media*/
+
+/* ie */
+.hero-unit .col-dir { width/*\**/:37%\9; }
+.hero-unit .col-esq { *width:310px; } 
+.hero-unit .col-dir { *width:360px;  }
+.hero-unit .menu-jc { *width: 350px;} 
+.hero-unit .col-dir span { *margin:-6px 0 0 0;}  
+.row-fluid .span4 { *margin-left:0} 
+/* /ie */
 
 
