--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -1,146 +1,5 @@
-@font-face {
-    font-family: 'source_sans_probold';
-    src: url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.eot');
-    src: url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.woff') format('woff'),
-         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.ttf') format('truetype'),
-         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.svg#source_sans_probold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-} 
+/* jornaldacultura*/
 body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultura/bg-jc.jpg) repeat-x; color:#000; }
-
-.como { margin-right: 10px; }
-
-.hero-unit { padding-right: 10px; min-height:200px;position:relative}
 .hero-unit .bgtopo { width: 260px; height:200px; background:url(/portal/images/capaPrograma/segundatela/jornaldacultura/bg-topo-jc.jpg) no-repeat; float:left; margin-right:10px; }
-.hero-unit .col-esq { max-width: 40%; float:left; }
-.hero-unit .col-esq h1 { margin:30px 0 0 0; padding:0; text-indent:-9999px; background:url(/portal/images/capaPrograma/segundatela/jornaldacultura/logo-jc.png) no-repeat; width: 176px; height:71px;}
-.hero-unit .col-esq p {  font-size:14px; line-height: 18px; text-align: left; margin:20px 0 10px 0;  }
-.hero-unit .redes { text-align:left; }
-.hero-unit .col-dir {  float:right; width: 39%; }
-
-.hero-unit .menu-jc {clear: both; margin-top:40px; float: right; width:300px; }
-.hero-unit .menu-jc p,
-.hero-unit .menu-jc a { text-transform:uppercase; color:#666; font-weight:bold; float:left; text-align:right; font-size:14px; height:20px; line-height:20px; }
-.hero-unit .menu-jc a:hover { text-decoration:none; }
-.hero-unit .menu-jc li{ list-style: none;}
-.hero-unit .menu-jc .como { background:#fff; padding:0 5px;}
-.hero-unit .menu-jc .como:hover { background:#666; color:#fff; }
-.hero-unit .menu-jc span { margin:-6px 10px 0 10px; float:left; color:#c4c4c4; font-size: 18px; }
-.hero-unit .menu-jc .numero { background:#666; color:#ccff33; padding:0 5px; margin:0; font-size:14px; min-width:20px; text-align:center; }
-.hero-unit .menu-jc .seta { border:5px solid transparent;  border-left-color: #666; width: 0; height:0; margin:0; padding:0; display:block; float:left; margin-top:5px; }
-.hero-unit .menu-jc .offline { color:#ce0002;}
-
-#twitter-widget-1 { min-height:600px; }
-
-/* media screen*/
-@media screen and (max-width: 1200px){
-  .hero-unit .col-dir { max-width: 36%; }
-  .hero-unit .col-esq { max-width:60%; margin-left:0; }
-  /*.hero-unit .menu-jc { margin-top:20px; }*/
-  .hero-unit .menu-jc .como { margin-bottom:10px; }
-  .hero-unit .menu-jc a,
-  .hero-unit .menu-jc a { font-size:12px; }
-  .hero-unit .menu-jc span { margin-top:-6px;} 
-}
-
-@media screen and (max-width: 1024px){
-  .hero-unit .col-dir { max-width: 33%; }
-  .hero-unit .col-esq { max-width:60%; margin-left:0; }
-  /*.hero-unit .menu-jc { margin-top:120px; }*/
-  .hero-unit .menu-jc .como { margin-bottom:10px; }
-  .hero-unit .menu-jc p,
-  .hero-unit .menu-jc a { font-size:12px; }
-  .hero-unit .menu-jc span { margin-top:-6px;} 
-  .conteudo .span8 { width:100%; }
-  .conteudo .span4 { width:100%; margin-left:0; }
-  .accordion-inner iframe { width: 100%; height:590px;} 
-  .hero-unit .menu-jc a.online { padding-right:10%; }
-  
-}
-
-@media screen and (max-width: 980px){
-  .hero-unit .col-dir { max-width: 20%; }
-  .hero-unit .col-esq { max-width:40%; margin-left:0; }
-  .hero-unit .col-dir span.barra { display:none; }
-  .hero-unit .menu-jc { width:155px; }
-  /*
-  .hero-unit .menu-jc { margin-top:20px; }
-  .hero-unit .menu-jc .como { margin-bottom:10px; }
-  .hero-unit .menu-jc a { font-size:12px; }
-  .hero-unit .menu-jc span { margin-top:-6px;} 
-  .conteudo .span8 { width:100% }
-  .conteudo .span4 { width:100%; margin-left:0; }
-  .accordion-inner iframe { width: 100%; height:590px;} 
-  .hero-unit .menu-jc a.online { padding-right:10%; }
-  */
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media (max-width : 768px)  {
-  .hero-unit .bgtopo { display:none; }
-  .conteudo { background:#fff; overflow:hidden; }
-  .accordion-group .conteudo { background:#eee; }
-  .accordion-inner iframe { width:100%; height:410px; }
-  .hero-unit { padding:1%; min-height:/*215px*/187px; }
-  .hero-unit .col-esq { max-width: 100%; width:40%; margin-left:0; }
-  .hero-unit .col-dir { max-width:100%; width:48%; }
-  .hero-unit .col-esq p { text-align:center; }
-  .hero-unit .col-esq h1 { margin:2% auto; }
-  .hero-unit .redes { min-width:350px; margin-left:30px; }
-  .hero-unit .menu-jc { /*margin-top:5px;*/ float:right; }
-  .hero-unit .col-dir span.barra { display:block; }
-  .hero-unit .col-dir a { display:block;  }
-  .hero-unit .col-esq p { margin-bottom:6px; }
-  /*#box-clock {margin-top:130px;}*/
-}
-
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
-  .hero-unit .col-esq p { margin:22px 0; }
-  /*.hero-unit { padding-right: 10px; min-height:200px;}*/
-  /*.hero-unit .menu-jc { float:left; margin-top:140px; }*/
-  .hero-unit .redes { min-width:350px; margin-left:30px; }
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media (max-width : 480px)  {
-  body { background-color:#a4050d; }
-  .hero-unit .col-dir,
-  .hero-unit .col-esq { max-width: 100%; width:100%;}  
-  .hero-unit .col-dir .fechar { display:none; }
-  .hero-unit .col-esq p { margin:4px 0 0; text-align:left; }
-  .hero-unit .col-esq h1 { margin:2% auto; background:url("/portal/images/capaPrograma/segundatela/jornaldacultura/logo-jc-small.png") no-repeat scroll 0 0 transparent }
-  .hero-unit .menu-jc { float:left; margin-left:1%; margin-top:9px; }
-  .conteudo .span8 { min-height:500px; }
-  .hero-unit .col-esq p { text-align:center; }
-  .hero-unit { min-height:260px; }
-  /*#box-clock {margin:170px 30px;}*/
- #box-clock { float:left !important; left:30px; top:0 !important; }
-  
-}
-
-/* clock */
-#box-clock{width:122px; height:40px; background: #cccccc; display: block; position:relative; top:10px; right:20px; float:right;}
-#box-clock #no-ar{width: 60px;background: #FFF;float: left;height: 30px;margin: 5px;}
-#box-clock #no-ar p{text-align:center; color:#ff0000;font-family:'source_sans_probold', Arial, Helvetica, sans-serif; text-transform:uppercase; font-weight: normal; }
-#box-clock li{line-height: 30px;list-style: none;float: left; font-family:'source_sans_probold', Arial, Helvetica, sans-serif; color:#ccff33; font-weight: normal;}
-#box-clock #no-ar ul{position: absolute;top: 5px;right: 5px;background: #333333;padding: 0 3px; width: 45px; font-size:16px;}
-#hours{padding-left: 2px;}
-#point {position: relative;-moz-animation: mymove 1s ease infinite;-webkit-animation: mymove 1s ease infinite;padding:0 3px;}
-@-webkit-keyframes mymove { 
-0% {opacity:1.0; text-shadow:0 0 20px #00c6ff;}
-50% {opacity:0; text-shadow:none; }
-100% {opacity:1.0; text-shadow:0 0 20px #00c6ff; }  
-}
-
-@-moz-keyframes mymove {
-0% {opacity:1.0; text-shadow:0 0 20px #00c6ff;}
-50% {opacity:0; text-shadow:none; }
-100% {opacity:1.0; text-shadow:0 0 20px #00c6ff; }  
-}
+.hero-unit .col-esq h1 { background:url(/portal/images/capaPrograma/segundatela/jornaldacultura/logo-jc.png) no-repeat; width: 176px; height:71px;}
+/* /jornaldacultura*/
