--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -204,6 +204,14 @@ and (orientation : portrait) {
   .hero-unit .redes { min-width:350px; margin-left:30px; }
 }
 
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+  .accordion-inner iframe { width: 100%; height:390px;} 
+}
+
 /* Smartphones (portrait and landscape) ----------- */
 @media (max-width : 480px)  {
   body { padding:0; }
