--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -196,11 +196,6 @@ and (orientation : landscape) {
 }
 
 /* iPads (portrait) ----------- */
-@media screen and (max-device-width: 1024px){
-  .accordion-inner iframe { width: 100%; height:390px !important;} 
-}
-
-/* iPads (portrait) ----------- */
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
@@ -209,7 +204,13 @@ and (orientation : portrait) {
   .hero-unit .redes { min-width:350px; margin-left:30px; }
 }
 
-
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+  .accordion-inner iframe { min-height:390px;} 
+}
 
 /* Smartphones (portrait and landscape) ----------- */
 @media (max-width : 480px)  {
