--- a/web/portal/css/tvcultura/sites/revistavitrine.css
+++ b/web/portal/css/tvcultura/sites/revistavitrine.css
@@ -11,3 +11,4 @@ body { background:#fff url("/portal/images/capaPrograma/revistavitrine/bg-vitrin
 #miolo { margin-top:0; }
 #rodape-portal { margin-top:-50px; }
 .conteudo-online { margin-bottom:100px; }
+.fb_edge_widget_with_comment { float:left; }
