--- a/web/portal/css/tvcultura/sites/preestreia-sol-conj.css
+++ b/web/portal/css/tvcultura/sites/preestreia-sol-conj.css
@@ -77,7 +77,7 @@ a.repertorio:hover{text-decoration:none; background-color:#6d6969;}
 #form-contato-conjunto label.error{background-color: #f5d6cc;color: #863f27;display: none;font-size: 12px;font-weight: normal;margin-top: 4px;padding-left: 3px; text-transform: none;}
 #form-contato-conjunto .erro{border: 1px solid #f5d6cc;}
 #form-contato-conjunto label.checked{background: none;height: 0px;}
-
+a.conj-repertorio{margin-top:-15px;height: 30px;line-height: 30px;background: #ff6633;}
 .escSolista, .escConjunto{margin:20px 0 10px 0px; padding:10px 15px 10px 15px; background-color:#ff6633; color:#FFFFFF; text-decoration: none;}
-.escSolista:hover, .escConjunto:hover{background-color: #f09c80;}
+.escSolista:hover, .escConjunto:hover,#form-contato-conjunto a.conj-repertorio{background-color: #f09c80;}
 /* /form */
