--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -23,4 +23,5 @@ body {background: black;}
 #enviar{cursor: pointer;background: red;border: none;padding: 6px;float: left;font-size: 14px;color: #FFF;margin: 10px}
 #email{float: left;margin: 10px 0 200px 0px;padding: 4px;width: 621px;}
 label.error{position: absolute;bottom: -10px;color: red;}
-#capa-site label { clear:both; }
+#capa-site label { clear:both; display:block; }
+#capa-site label input { margin-left:10px; }
