--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -23,7 +23,11 @@ body {background: black;}
 #enviar{cursor: pointer;background: red;border: none;padding: 6px;float: left;font-size: 14px;color: #FFF;margin: 10px}
 #email{float: left;margin: 10px 0 200px 0px;padding: 4px;width: 621px;}
 label.error{position: absolute;bottom: -10px;color: red;}
-#capa-site label { clear:both; display:block; }
-#capa-site label input { margin-left:10px; }
+#capa-site label { display:block; float: left; margin-right:10px; }
+#capa-site label input { margin-left:10px; width:  }
 #form-contato { float:left; }
 #enviar { float:right; }
+.span8 { width: 80% }
+.span6 { width: 60% }
+.span4 { width: 40% }
+.span2 { width: 20% }
