--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -24,10 +24,10 @@ body {background: black;}
 #email{float: left;margin: 10px 0 200px 0px;padding: 4px;width: 621px;}
 label.error{position: absolute;bottom: -10px;color: red;}
 #capa-site label { display:block; float: left; margin-right:10px; }
-#capa-site label input { margin-left:10px; width:  }
+#capa-site label input { margin-left:10px; width:100%;  }
 #form-contato { float:left; }
 #enviar { float:right; }
 .span8 { width: 80% }
-.span6 { width: 60% }
+.span6 { width: 58% }
 .span4 { width: 40% }
-.span2 { width: 20% }
+.span2 { width: 22% }
