--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -32,3 +32,5 @@ label.error{position: absolute;bottom: -10px;color: red;}
 .span4 { width: 40% }
 .span2 { width: 22% }
 .span3 { width: 26.1% }
+.span5 { width: 7%; float:left; display:block; }
+.span5 input { display: block;    float: right;    width: 50%; }
