--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -27,10 +27,10 @@ label.error{position: absolute;bottom: -10px;color: red;}
 #capa-site label input { width:100%; margin-top:5px;  }
 #form-contato { float:left; margin-bottom:50px; width: 800px; }
 #enviar {clear: both;    float: right;    margin: 2% 17.3%; }
-.span8 { width: 100% }
-.span6 { width: 58% }
+.span8 { width: 97% }
+.span6 { width: 73% }
 .span4 { width: 40% }
 .span2 { width: 22% }
-.span3 { width: 26.1% }
-.span5 { width: 7%; float:left; display:block; }
+.span3 { width: 30.8% }
+.span5 { width: 9%; float:left; display:block; margin-top:5px !important; }
 .span5 input { display: block;    float: right;    width: 50% !important; }
