--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -26,7 +26,7 @@ label.error{position: absolute;bottom: -10px;color: red;}
 #capa-site label { display:block; float: left; margin-right:20px; }
 #capa-site label input { width:100%; margin-top:5px;  }
 #form-contato { float:left; margin-bottom:50px; width: 800px; }
-#enviar {clear: both;    float: right;    margin: 2% 17.3%; }
+#enviar {clear: both;    float: right;    margin: 2%; }
 .span8 { width: 97% }
 .span6 { width: 73% }
 .span4 { width: 40% }
