--- a/web/portal/css/tvcultura/sites/lygia.css
+++ b/web/portal/css/tvcultura/sites/lygia.css
@@ -1,5 +1,4 @@
-.bg-chamada,
-.bg-site { background :url(/portal/images/capaPrograma/lygia/bg.jpg) repeat; }
+body { background :url(/portal/images/capaPrograma/lygia/bg.jpg) repeat; }
 #barra-site .redes { float: right; }
 #barra-site h2 {margin-top:30px;}
 
