--- a/web/portal/css/tvcultura/sites/lygia.css
+++ b/web/portal/css/tvcultura/sites/lygia.css
@@ -1,4 +1,6 @@
 body { background :url(/portal/images/capaPrograma/lygia/bg.jpg) repeat; }
 #barra-site .redes { float: right; }
 #barra-site h2 {margin-top:30px;}
+.bg-site { display: none; }
+#barra-site { margin-top:50px; }
 
