--- a/web/portal/css/tvcultura/sites/lygia.css
+++ b/web/portal/css/tvcultura/sites/lygia.css
@@ -1,4 +1,4 @@
-body { background :url(/portal/images/capaPrograma/lygia/bg.jpg) repeat; }
+body { background:#fff url(/portal/images/capaPrograma/lygia/bg.jpg) no-repeat; }
 #barra-site .redes { float: right; }
 #barra-site h2 {margin-top:30px;}
 .bg-site { display: none; }
