--- a/web/portal/css/tvcultura/sites/lygia.css
+++ b/web/portal/css/tvcultura/sites/lygia.css
@@ -3,4 +3,5 @@ body { background:#fff url(/portal/images/capaPrograma/lygia/bg.jpg) repeat-x; }
 #barra-site h2 {margin-top:30px;}
 .bg-site { display: none; }
 #barra-site { margin-top:50px; }
+#miolo { margin-top:30px; }
 
