--- a/web/portal/css/tvcultura/sites/lygia.css
+++ b/web/portal/css/tvcultura/sites/lygia.css
@@ -6,3 +6,4 @@ body { background:#fff url(/portal/images/capaPrograma/lygia/bg.jpg) repeat-x; }
 #barra-site { margin-top:50px; }
 #miolo { margin-top:30px; }
 #barra-site .topo-programa { margin-top:60px; }
+#capa-site { margin-top:0; }
