--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -34,4 +34,4 @@ label.error{position: absolute;bottom: -10px;color: red;}
 .span3 { width: 30.8% }
 .span5 { width: 9%; float:left; display:block; margin-top:5px !important; }
 .span5 input { display: block;    float: right;    width: 50% !important; }
-label.error { color:red !important; font-size: 12px !important;    margin-top: 5px !important;    position: relative; padding:0 2px; width: 100%; }
+label.error { color:red !important; font-size: 12px !important;    margin-top: 5px !important;    position: relative; padding:0 2px; width: 100%; bottom:0; }
