--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -25,7 +25,7 @@ body {background: black;}
 label.error{position: absolute;bottom: -10px;color: red;}
 #capa-site label { display:block; float: left; margin-right:20px; }
 #capa-site label input { width:100%; margin-top:5px;  }
-#form-contato { float:left; margin-bottom:100px; width: 800px; }
+#form-contato { float:left; margin-bottom:50px; width: 800px; }
 #enviar {clear: both;    float: right;    margin: 2%; }
 .span8 { width: 97% }
 .span6 { width: 73% }
@@ -35,3 +35,4 @@ label.error{position: absolute;bottom: -10px;color: red;}
 .span5 { width: 9%; float:left; display:block; margin-top:5px !important; }
 .span5 input { display: block;    float: right;    width: 50% !important; }
 label.error { color:red !important; font-size: 12px !important;    margin-top: 5px !important;    position: relative; padding:0 2px; width: 100%; bottom:0; }
+#rodape-portal { *margin-top:50px; }
