--- a/web/portal/css/tvcultura/sites/lygia.css
+++ b/web/portal/css/tvcultura/sites/lygia.css
@@ -6,3 +6,6 @@ body { background:#fff url(/portal/images/capaPrograma/lygia/bg.jpg) repeat-x; }
 #miolo { margin-top:30px; }
 #barra-site .topo-programa { margin-top:60px; }
 #capa-site { margin-top:0 !important; }
+#barra-site h2 a img { display:none; }
+#barra-site h2 a { background:url(/portal/images/capaPrograma/lygia/logolygia.png) no-repeat; width:339px; height:31px; display:block; }
+
