--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -36,4 +36,4 @@ label.error{position: absolute;bottom: -10px;color: red;}
 .span5 input { display: block;    float: right;    width: 50% !important; }
 label.error { color:red !important; font-size: 12px !important;    margin-top: 5px !important;    position: relative; padding:0 2px; width: 100%; bottom:0; }
 #rodape-portal { *margin-top:50px; }
-.checked { display:none }
+.checked { display:none !important; }
