--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -37,3 +37,6 @@ label.error{position: absolute;bottom: -10px;color: red;}
 label.error { color:red !important; font-size: 12px !important;    margin-top: 5px !important;    position: relative; padding:0 2px; width: 100%; bottom:0; }
 #rodape-portal { *margin-top:50px; }
 .checked { display:none !important; }
+.regulamento { float:left; }
+.regulamento h1 { font-size:24px; color:#fff; }
+.regulamento textarea { width:970px; height: 600px; }
