--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -42,6 +42,6 @@ h1,
 .regulamento h1 { font-size:24px; color:#fff; text-align:left; float:left;  }
 .regulamento textarea { width:930px; height: 600px; margin-top:20px; padding:20px; color: #fff; background:#000; line-height:22px; font-size:14px; }
 .regulamento button { float: right;    margin: 2%;   }
-#loginInstruction a,
-#loginInstruction { color:#fff !important; }
+#ytdContainer-2001 a,
+#ytdContainer-2001 { color:#fff !important; }
 .span6.concordo input { width:15px !important; margin-right:5px; }
