--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -42,4 +42,4 @@ h1,
 .regulamento h1 { font-size:24px; color:#fff; text-align:left; float:left;  }
 .regulamento textarea { width:930px; height: 600px; margin-top:20px; padding:20px; color: #fff; background:#000; line-height:22px; font-size:14px; }
 .regulamento button { float: right;    margin: 2%;   }
-iframe { background:#fbfbfb; margin-bottom:50px; }
+iframe { background:#fbfbfb; margin:20px 0 50px 0; }
