--- a/web/portal/css/tvcultura/sites/home-madmen.css
+++ b/web/portal/css/tvcultura/sites/home-madmen.css
@@ -1,4 +1,4 @@
-body { background:url(/portal/images/capaPrograma/home-madmen/bg.jpg) repeat-x; }
+body { background:#343434 url(/portal/images/capaPrograma/home-madmen/bg.jpg) repeat-x; }
 
 @font-face {
     font-family: 'daisywheelregular';
