--- a/web/portal/css/tvcultura/sites/segundatela/index.css
+++ b/web/portal/css/tvcultura/sites/segundatela/index.css
@@ -89,7 +89,7 @@ ul.nav{margin-left: 23%!important;}
   .hero-unit {height: auto!important}
   .hero-unit h1{margin-left:10%!important;margin-top:5%!important }
   .hero-unit p{display:block!important;margin-left:10%!important}
-  .hero-unit .redes{display:block!important;margin-left:10%!important; background:red}
+  .hero-unit .redes{display:block!important;margin-left:10%!important; background-color:red!important;}
   .bgtopo3{display:none;}
   .item{margin-bottom:5%!important;}
   .span8 h2{font-size:17px}
