--- a/web/portal/css/tvcultura/responsivo.css
+++ b/web/portal/css/tvcultura/responsivo.css
@@ -13,7 +13,7 @@
 .navbar-fixed-top .nav > .twitter > a { background-position:0 -372px; }
 .navbar-fixed-top .nav > .youtube > a { background-position:0 -405px; }
 .navbar-fixed-top .nav > .feed > a { background-position:0 -472px; }
-.navbar.navbar-fixed-top .navbar-inner .container { min-width:414px; }
+/*.navbar.navbar-fixed-top .navbar-inner .container { min-width:320px; }*/
 .navbar.navbar-fixed-top .navbar-inner .container,
 .navbar.navbar-fixed-top .navbar-inner {    background-color: #1B1B1B;    background-image: -moz-linear-gradient(center top , #222222, #111111);    background-repeat: repeat-x;    border-color: #252525;   }
 /* /topo*/
