--- a/web/portal/css/tvcultura/sites/segundatela/index.css
+++ b/web/portal/css/tvcultura/sites/segundatela/index.css
@@ -1,12 +1,12 @@
 @import url("geral.css");
 #menu-portal-2 {top: -11px;}
-.navbar-fixed-top{position:relative;}
+.navbar-fixed-top{position:relative}
 ul.nav{margin-left: 23%!important;}
 .ipt-txt{border-radius: 0px!important;width: 70px!important;height: 15px!important;}
 .bgtopo2{background:url(/portal/images/capaPrograma/segundatela/index/bg-segundatela.png) repeat-x;}
 .bgtopo3{background:url(/portal/images/capaPrograma/segundatela/index/bg-segundatela2.png) repeat-x; position:absolute;top:0; width:100%; height:154px;right:100%;}
 .container{max-width:980px;margin:0 auto;position:relative;}
-.hero-unit{background:none;min-height: 155px; overflow: hidden!important;}
+.hero-unit{background:none;min-height: 155px; overflow: hidden;}
 .hero-unit .col-esq h1 {font-size: 22px;line-height: 24px;text-transform: uppercase;margin: 34px 0 0 0;padding: 0;text-indent: 0px; font-family:'source_sans_proregular'; color:#ff6833; text-align:left;}
 .hero-unit .col-esq p {margin: 10px 0; color:#FFF; text-align:left; font-size:13px; font-family:'source_sans_proregular';}
 .hero-unit .bgtopo { width: 221px; height:156px; background:url(/portal/images/capaPrograma/segundatela/index/segundaTelaLogo.jpg) no-repeat; float:left; margin-right:10px;}
@@ -84,11 +84,12 @@ ul.nav{margin-left: 23%!important;}
 
 /* celular */
 @media (max-width: 480px) {
+  
   .nav li{text-align: left;}
-  .hero-unit {height: auto!important; overflow: hidden;}
+  .hero-unit {height: auto!important}
   .hero-unit h1{margin-left:10%!important;margin-top:5%!important }
   .hero-unit p{display:block!important;margin-left:10%!important}
-  .hero-unit .redes{display:block!important;margin-left:10%!important; }
+  .hero-unit .redes{display:block!important;margin-left:10%!important}
   .bgtopo3{display:none;}
   .item{margin-bottom:5%!important;}
   .span8 h2{font-size:17px}
