--- a/web/portal/quintal/css/geralQuintal.css
+++ b/web/portal/quintal/css/geralQuintal.css
@@ -2711,13 +2711,13 @@ z-index: 503;
 #nuvem1{width:266px; height:212px; top:-25px; left:-280px;background: url(/portal/quintal/back-novo/img-bg-nuvem1.png) no-repeat; z-index:0;}
 #nuvem2{width:188px; height:155px; top:10px; right: -156px;background: url(/portal/quintal/back-novo/img-bg-nuvem2.png) no-repeat; z-index:0;}
 #nuvem3{width:260px; height:234px; top: -134px; left: 650px;background: url(/portal/quintal/back-novo/img-bg-nuvem1.png) no-repeat; z-index:0;}
-/*#balao{width:196px; height:348px; top:-109px; left:-191px;background: url(/portal/quintal/back-novo/img-bg-balao.png) no-repeat; z-index:0;}*/
-#balao{width:196px; height:348px; top:-109px; right:-4px;background: url(/portal/quintal/back-novo/img-bg-balao.png) no-repeat; z-index:0;}
-/*#bola{width:190px; height:174px;top: 293px;left: -220px;background: url(/portal/quintal/back-novo/img-bg-futebol.png) no-repeat; z-index:0;}*/
-#bola{width:190px; height:174px;top: 700px;right: -191px;background: url(/portal/quintal/back-novo/img-bg-futebol.png) no-repeat; z-index:0;}
+#balao{width:196px; height:348px; top:-109px; left:-191px;background: url(/portal/quintal/back-novo/img-bg-balao.png) no-repeat; z-index:0;}
+#bola{width:190px; height:174px;top: 293px;left: -220px;background: url(/portal/quintal/back-novo/img-bg-futebol.png) no-repeat; z-index:0;}*/
 #bau{width:441px; height:407px;top: 504px;left: -320px;background: url(/portal/quintal/back-novo/img-bg-bau.png) no-repeat; z-index:0;}
 #peteca{width:410px; height:464px;top: 307px;right: -301px; background: url(/portal/quintal/back-novo/img-bg-peteca-bola.png) no-repeat; z-index:0;}
-#niver2anos{width: 503px;height: 959px;background: url(/portal/quintal/images/aniversario2anos/img_baloes-bau.png) no-repeat;z-index: 0;left: -391px;top: -68px;}
+/*#balao{width:196px; height:348px; top:-109px; right:-4px;background: url(/portal/quintal/back-novo/img-bg-balao.png) no-repeat; z-index:0;} aniversario 2 anos*/
+/*#bola{width:190px; height:174px;top: 700px;right: -191px;background: url(/portal/quintal/back-novo/img-bg-futebol.png) no-repeat; z-index:0;}aniversario 2 anos*/
+/*#niver2anos{width: 503px;height: 959px;background: url(/portal/quintal/images/aniversario2anos/img_baloes-bau.png) no-repeat;z-index: 0;left: -391px;top: -68px;}aniversario 2 anos*/
 
 /* itens background */
 /* horario */
