--- a/web/portal/quintal/css/indexQuintal.css
+++ b/web/portal/quintal/css/indexQuintal.css
@@ -1,7 +1,7 @@
 .rodape .menuRodape {margin-top: 74px;}
 .conteudoWrapper {height: auto;}
 
-#menu-quintal-principal{position:relative;width:100%;min-height:600px;z-index:3000;}
+#menu-quintal-principal{position:relative;width:100%;min-height:700px;z-index:3000;}
 .over{position:absolute;z-index:5000;}
 
 #over-teobaldo{top: -16px;left: 107px;}
@@ -11,7 +11,7 @@
 #over-doroteia{right: 149px;top: -25px;}
 #over-ludovico{right: 16px;bottom: 30px;}
 
-/* aniversario */
+/* aniversario 2 anos
 #anos{position: absolute;width: 523px;height: 204px;background: url(/portal/quintal/images/aniversario2anos/img_anos.png) no-repeat;z-index: 0;left: 265px;top: 15px;}
 #niver-principal{top: 228px;position: relative;width:950px; height:320px; background: url(/portal/quintal/images/aniversario2anos/img_box.png) no-repeat;}
 .niver-esquerda{width:440px;height:320px; display:block; float:left;}
@@ -21,5 +21,5 @@
 .niver-esquerda span.niver-combinado{font-size: 30px;color: #cb35a4;background: #e4f527;padding: 2px; text-align: center;font-weight: bold;position: absolute;bottom: 10px !important;left: 90px !important;width: 260px;height: 40px;line-height: 43px;}
 .niver-esquerda span.niver-texto{background: #cb35a4;line-height: 28px;color: #fff;padding: 0px 7px 4px 7px;}
 .niver-esquerda p{color: #fff;font-size: 24px;position: absolute;z-index: 2;display: block;width: 435px;top: 80px;left: 15px;text-align: center;}
-
+*/
 
