--- a/web/portal/css/tvcultura/sites/segundatela/index.css
+++ b/web/portal/css/tvcultura/sites/segundatela/index.css
@@ -86,11 +86,13 @@ ul.nav{margin-left: 23%!important;}
 }
 
 /* iPads (landscape) ----------- */
+/*
 @media only screen 
 and (min-device-width : 768px) 
 and (orientation : landscape) {
 .span3.item, .span4.item{ width:50% !important;} 
 } 
+*/ 
 
 /* celular */
 @media (max-width: 480px) {
