--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -237,3 +237,4 @@ and (orientation : portrait) {
 /* /ie */
 
 .hero-unit .menu-jc .como { margin:0; }
+.hero-unit .col-dir span.barra { font-size:21px; }
