--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -206,7 +206,7 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 #rodape-portal { margin-top:50px;clear:both; }
 .capa-voltar-topo {  width:970px; margin:0 auto; position:relative; z-index:10; margin-bottom:-15px; }
 .voltar-topo { display:block; overflow:hidden; width:96px; background:url(/portal/images/bg-voltar-topo.jpg) repeat-x; height:36px; padding:4px 0 0 4px; font-size:10px; color:#fff; line-height:16px; }
-.voltar-topo span { background:url(../images/voltar-topo.png) no-repeat; width:16px; height:16px; display:block; float:left; }
+.voltar-topo span { background:url(/portal/images/voltar-topo.png) no-repeat; width:16px; height:16px; display:block; float:left; }
 .voltar-topo:hover { text-decoration:none; }
 .capa-rodape {  background:#333; border-top:2px solid #d3d3d3; height:470px; }
 #rodape-portal .box-rodape { width:1054px; padding-left:50px; margin:0 auto; height:470px; background:#333; position:relative;  }
@@ -221,11 +221,10 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 #rodape-portal .col-central ul { width:200px; float:left; }
 #rodape-portal .col-dir { width:120px; float:left; margin-top:20px; }
 #rodape-portal .col-dir a { text-indent:-9999px; display:block; }
-#rodape-portal .col-dir .fpa {  background:url(../images/logo-fpa.png) no-repeat; width:105px; height:63px; margin-bottom:30px; }
+#rodape-portal .col-dir .fpa {  background:url(/portal/images/logo-fpa.png) no-repeat; width:105px; height:63px; margin-bottom:30px; }
 #rodape-portal .col-dir .cultura {  background:url(/portal/images/logo-cultura.png) no-repeat; width:61px ; height:61px; margin-left:17px; }
 /*fxdfdsfd*/
 #rodape-portal .copyright {  margin:50px 0 20px 0; margin:0 auto; clear:both;position:absolute; right:400px; bottom:10px; }
 #rodape-portal .copyright p { font-size:10px; text-align:center; color:#fff !important; width:250px; margin:0 auto;  }
 #rodape-portal .posicao { width:200px; float:left; text-align:left; }
-.voltar-topo span {background: url(/portal/images/voltar-topo.png) no-repeat;width: 16px;height: 16px;display: block;float: left;}
 /******** /RODAPE-PORTAL *********/
